package com.maxqiu.demo.P15_Iterator;

/**
 * 部门
 * 
 * @author Max_Qiu
 */
public class Department {

    private String name;

    public Department(String name) {
        super();
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

}
